starting of the project with mostly al

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -90,6 +90,11 @@
             padding: 3px;
             box-shadow: 1px 1px 5px #80808057;
         }
+
+        .list-button{
+            border: #e5e5ea;
+            padding: 3px;
+        }
     </style>
 </head>
 
@@ -103,7 +108,7 @@
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">SmartFiTT</span>
             </a>
 
-
+            <button class="list-button">List</button>
         </div>
     </nav>
 
