--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,8 @@
                 <button id="signup-btn">Sign Up</button>
                 <button id="login-btn">Log In</button>
                 <p>OR</p>
-                <button id="continue-btn">Continue to Chatbot</button>
+                <button id="continue-btn">Continue without Sign Up</button>
+                <p></p>
             </div>
         </div>
 
