--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         <!-- Homepage Section -->
         <div class="homepage">
             <h1>Smartfit</h1>
-            <h1>AI Gym Assistant</h2>
+            <h1>AI Fitness Assistant</h2>
             <button id="interact-btn" class="interact-btn">Interact</button>
             <!-- Button to navigate to exercise page -->
             <a href="{{ url_for('exercise') }}" id="go-to-exercises">
