--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,12 @@
     <div class="content">
         <!-- Sign In/Sign Up Section -->
         <div class="auth-buttons" id="auth-buttons">
-            <button id="sign-in-btn">Sign In</button>
+            <a href="/login">
+                <button id="sign-in-btn">Sign In</button>
+            </a>
         </div>
+        
+        
 
         <!-- Homepage Section -->
         <div class="homepage">
