--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,9 +22,11 @@
             <label for="confirmPassword">Confirm Password:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
 
-            <button type="submit">Sign Up</button>
+            <button type="submit" id="signUpBtn" style="margin-bottom: 10px;">Sign Up</button>
+            <button type="button" id="backBtn" style="margin-top: 10px;" onclick="location.href='/';">Back</button>
+
         </form>
-        <p>Already have an account? <a href="login.html">Login here</a></p>
+        <p>Already have an account? <a href="/login">Login here</a></p>
     </div>
     <script src="scripts.js"></script>
 </body>
