added the main page with logout button

--- a/templates/main.html
+++ b/templates/main.html
@@ -14,8 +14,8 @@
     <div class="content">
         <!-- Sign In/Sign Up Section -->
         <div class="auth-buttons" id="auth-buttons">
-            <a href="/login">
-                <button id="sign-in-btn">Sign In</button>
+            <a href="/logout">
+                <button id="sign-in-btn">Logout</button>
             </a>
         </div>
         
