--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>SmartFit Signup</h2>
-        <form id="signupForm">
+        <form id="signupForm" action="/signup" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" autocomplete="off" placeholder="Enter your full name" required>
 
@@ -28,6 +28,6 @@
         </form>
         <p>Already have an account? <a href="/login">Login here</a></p>
     </div>
-    <script src="scripts.js"></script>
+
 </body>
 </html>
