--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div class="chat-container">
+            <div class="home-btn" onclick="location.href='/main';">Home</div>
             <div class="chat-header">Smart-Fit Chatbot 💬</div>
+            <div class="exercise-btn" onclick="location.href='/exercise';">exercise</div>
             <div id="chat-messages" class="chat-messages"></div>
             <div class="chat-footer">
                 <div id="chat-options" class="suggestions"></div>
